# swims-connect-uipath

./: .env.example  .gitignore  ARCHITECTURE.md  IMPLEMENTATION-GUIDE.md  LICENSE  PORTING-PLAN.md  README.md  SUBMISSION.md  sdd.md
SWIMSChildProtectionCase/: AGENTS.md  SWIMSChildProtectionCase.uipx
SWIMSChildProtectionCase/SWIMSChildProtectionCase/: caseplan.json  entry-points.json  operate.json  project.uiproj
SWIMSChildProtectionCase/WhatsAppConversation/: WhatsAppConversation.flow  project.uiproj
agent/: README.md  agent.mermaid  bindings.json  collation.py  concerns.py  entry-points.json  graph.py  langgraph.json  primero.py  project.uiproj  prompts.py  pyproject.toml  reports.py  run_local.py  tools.py  uipath.json
docs/: BUILT-WITH-CLAUDE-CODE.md  SOURCE-INVENTORY.md  SWIMS-Connect-AgentHack-2026.pptx  SWIMS-LIFECYCLE-CONTRACTS.md  UIPATH-REFERENCE.md  WHATSAPP-UIPATH-ARCHITECTURE.md
scripts/: build_agenthack_deck.py
tasks/: NEXT-STEPS.md  build-issues.md  registry-resolved.json  tasks.md
whatsapp-gateway/: .env.example  .gitignore  package-lock.json  package.json
whatsapp-gateway/scripts/: e2e_conversation.mjs  e2e_image_case.mjs  invoke_agent.py  native_tasks_e2e.mjs  probe-uipath-auth.mjs  probe_worker_session.mjs  reports_e2e.mjs  sched_cancel_e2e.mjs  scheduling_e2e.mjs  worker_bridge_e2e.mjs  worker_flow_e2e.mjs
whatsapp-gateway/src/: auth-server.js  bridge.js  case-monitor.js  config.js  index.js  lifecycle-sync.js  maestro-client.js  media.js  message.js  primero-client.js  router.js  scheduler.js  session-store.js  state-store.js  (+1 more)
(+4 files in other folders)
