[project]
name = "swims-connect-agent"
version = "0.1.8"
description = "SWIMS-Connect intake and case agent (LangGraph plus Gemini) UiPath coded agent"
authors = [{ name = "SWIMS-Connect", email = "s.zachariyya@renmohomes.com" }]
requires-python = ">=3.11"
dependencies = [
    "uipath>=2.0.0",
    "uipath-langchain",
    "langgraph",
    "langchain-google-genai",
    "requests",
    "python-dotenv",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py", "data/*.json"]
